deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment  # Add the deployment name here
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: hello-world-installation
    meta.helm.sh/release-namespace: default

spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world-container
          image: malikawannasifreelance/helloworldapp:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"  # 100 milli-CPU
              memory: "128Mi"  # 128 MiB of memory
            limits:
              cpu: "500m"  # 500 milli-CPU
              memory: "256Mi"  # 256 MiB of memory
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
