existing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
      meta.helm.sh/release-name: hello-world-installation
      meta.helm.sh/release-namespace: default
spec:
  rules:
    - host: hello-world.wannasi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
